--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -41,14 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "051f05a0-5d3f-4b71-adb1-66c6f39060fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
     "import xlrd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "63d14666-f362-49fa-a94a-63c925960872",
    "metadata": {},
    "outputs": [
@@ -215,7 +216,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "c41e9f6a",
    "metadata": {},
    "outputs": [
@@ -274,28 +275,7 @@
       "boat          object\n",
       "body         float64\n",
       "home.dest     object\n",
-      "dtype: object\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1309 entries, 0 to 1308\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   pclass     1309 non-null   int64  \n",
-      " 1   survived   1309 non-null   int64  \n",
-      " 2   name       1309 non-null   object \n",
-      " 3   sex        1309 non-null   object \n",
-      " 4   age        1046 non-null   float64\n",
-      " 5   sibsp      1309 non-null   int64  \n",
-      " 6   parch      1309 non-null   int64  \n",
-      " 7   ticket     1309 non-null   object \n",
-      " 8   fare       1308 non-null   float64\n",
-      " 9   cabin      295 non-null    object \n",
-      " 10  embarked   1307 non-null   object \n",
-      " 11  boat       486 non-null    object \n",
-      " 12  body       121 non-null    float64\n",
-      " 13  home.dest  745 non-null    object \n",
-      "dtypes: float64(3), int64(4), object(7)\n",
-      "memory usage: 143.3+ KB\n"
+      "dtype: object\n"
      ]
     }
    ],
@@ -309,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "bde4a3fd-645b-4dc1-aeea-7f30873e4fbd",
    "metadata": {},
    "outputs": [
@@ -342,6 +322,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                          St Louis, MO\n",
+      "1       Montreal, PQ / Chesterville, ON\n",
+      "2       Montreal, PQ / Chesterville, ON\n",
+      "3       Montreal, PQ / Chesterville, ON\n",
+      "4       Montreal, PQ / Chesterville, ON\n",
+      "                     ...               \n",
+      "1304                                NaN\n",
+      "1305                                NaN\n",
+      "1306                                NaN\n",
+      "1307                                NaN\n",
+      "1308                                NaN\n",
+      "Name: home.dest, Length: 1309, dtype: object\n"
+     ]
     }
    ],
    "source": [
@@ -373,8 +371,11 @@
     "plt.title('Survival Ratio by Age Bin')\n",
     "plt.xlabel('Age Bin')\n",
     "plt.ylabel('Survival Ratio')\n",
+    "\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(f\"{data['home.dest']}\")\n"
    ]
   },
   {
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "54987ccf",
    "metadata": {},
    "outputs": [
@@ -421,7 +422,8 @@
     }
    ],
    "source": [
-    "data.info()"
+    "pre_split_data = data.copy()\n",
+    "pre_split_data.info()"
    ]
   },
   {
@@ -441,6 +443,123 @@
   },
   {
    "cell_type": "markdown",
+   "id": "183187f2",
+   "metadata": {},
+   "source": [
+    "At first, I imputed missing values before splitting my dataset into train, test, and validation sets. This is a very common and obvious way to encounter data leakage, because the values I'd impute (through staticial methods) would be the same in all 3 sets. So any patterns / relationships my model might establish from the training set will inherintly also be present in the test and validation sets. This means that some of the data in these two sets won't actually be new to the model and the performance statstics will be overly optimistic.\n",
+    "\n",
+    "Instead, I can only use non-statical methods to manage missing values before splitting the dataset, meaning deleting columns and assinging constants to unknown values. I will only do this to categorical variables, as the value of 'Unknown' should have some sort of meaning and I've also found that its best practice because I may forget to impute these values later.\n",
+    ">- I will delete the cabin column, as it only has 295 values and in my opinion has little predictive power.\n",
+    ">- I will delete the body column, as it also has very few values and in my opinion it has little predicitve power.\n",
+    ">- I will fill in all missing values in the home.dest and embarked columns with 'Unknown'\n",
+    ">- For now, I will fill in all missing values in the boat column with 'Unknown', but I'm unsure if it has any predictive power so I may circle back and delete it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "85cd2c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1309 entries, 0 to 1308\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column     Non-Null Count  Dtype   \n",
+      "---  ------     --------------  -----   \n",
+      " 0   pclass     1309 non-null   int64   \n",
+      " 1   survived   1309 non-null   int64   \n",
+      " 2   name       1309 non-null   object  \n",
+      " 3   sex        1309 non-null   object  \n",
+      " 4   age        1046 non-null   float64 \n",
+      " 5   sibsp      1309 non-null   int64   \n",
+      " 6   parch      1309 non-null   int64   \n",
+      " 7   ticket     1309 non-null   object  \n",
+      " 8   fare       1308 non-null   float64 \n",
+      " 9   embarked   1309 non-null   object  \n",
+      " 10  boat       1309 non-null   object  \n",
+      " 11  home.dest  1309 non-null   object  \n",
+      " 12  age_bin    1046 non-null   category\n",
+      "dtypes: category(1), float64(2), int64(4), object(6)\n",
+      "memory usage: 124.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Deleting cabin and body columns\n",
+    "pre_split_data.drop(columns=['cabin', 'body'], inplace=True)\n",
+    "\n",
+    "# Assinging 'unknown' to missing values in the home.dest, embarked, and boat columns\n",
+    "pre_split_data.fillna({'home.dest': 'unknown', 'embarked': 'unknown', 'boat': 'unknown'}, inplace=True)\n",
+    "\n",
+    "pre_split_data.info() #confirming its right\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70eac060",
+   "metadata": {},
+   "source": [
+    "Before I split the dataset and impute missing values, I will encode all applicable categorical variables using One-hot encoding. This only includes the 'Sex' and 'Embarked' columns. Pclass is already encoded in an ordered manner (1 - 3) so I don't need to worry about it, otherwise I would use Ordinal encoding for this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca47dbee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_split_data = pandas.get_dummies(pre_split_data, columns=['sex'], drop_first=True)\n",
+    "pre_split_data = pandas.get_dummies(pre_split_data, columns=['embarked'], drop_first=True)\n",
+    "pre_split_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d74b276",
+   "metadata": {},
+   "source": [
+    "## Splitting the dataset\n",
+    "\n",
+    "First, I will just split the dataset into 'traing' and 'others' to ensure the training set is large enough. Then I split the 'others' datset into 'test' and 'validation', ensuring both are the same size.\n",
+    "\n",
+    "By using stratification, I ensure that each set has the same proportion of 'survived' values as the original dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a660c15e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_column = pre_split_data['survived']\n",
+    "other_columns = pre_split_data.drop(columns='survived')\n",
+    "\n",
+    "# Both test_size and random_state are essentially arbitrary. \n",
+    "    # 30/70 split between train and others is on the higher end (based on my limited knowledge), but it just ensures that the model has ample data to learn from\n",
+    "    # Random state of 42 is essentially meaningless, but I think it just acts as the seed for the randomization. This should stay the same for all splits (when splitting others)\n",
+    "main_train, main_other, target_train, target_other = train_test_split(\n",
+    "    other_columns, target_column, test_size=0.3, random_state=42, stratify=target_column\n",
+    ")\n",
+    "\n",
+    "main_validation, main_test, target_validation, target_test = train_test_split(\n",
+    "    main_other, target_other, test_size=0.5, random_state=42, stratify=target_other\n",
+    ")\n",
+    "# By stratifying target value (survived) in both splits, the main and other sets have the same proportion of survived passengers \n",
+    "# and the validation and test sets have the same proportion of survived passengers\n",
+    "\n",
+    "print(f\"Training set: {len(main_train)} samples\")\n",
+    "print(f\"Validation set: {len(main_validation)} samples\")\n",
+    "print(f\"Test set: {len(main_test)} samples\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ee71e6aa-8cb2-41cd-aed2-cd916893d231",
    "metadata": {},
    "source": [
@@ -449,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "7fba96bf-2914-439a-8dde-41788191ed89",
    "metadata": {},
    "outputs": [
@@ -485,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "5ae7aad5-a8f0-45b9-b608-1a8fc9ed687b",
    "metadata": {},
    "outputs": [],
