njumericval features scaled

--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "id": "051f05a0-5d3f-4b71-adb1-66c6f39060fa",
    "metadata": {},
    "outputs": [],
@@ -77,6 +77,7 @@
     "import xlrd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from category_encoders import BinaryEncoder"
    ]
   },
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 128,
    "id": "63d14666-f362-49fa-a94a-63c925960872",
    "metadata": {},
    "outputs": [
@@ -244,7 +245,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 116,
    "id": "c41e9f6a",
    "metadata": {},
    "outputs": [
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 129,
    "id": "bde4a3fd-645b-4dc1-aeea-7f30873e4fbd",
    "metadata": {},
    "outputs": [
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 130,
    "id": "54987ccf",
    "metadata": {},
    "outputs": [
@@ -480,12 +481,12 @@
     ">- I will delete the cabin column, as it only has 295 values and in my opinion has little predictive power.\n",
     ">- I will delete the body column, as it also has very few values and in my opinion it has little predicitve power.\n",
     ">- I will fill in all missing values in the home.dest and embarked columns with 'Unknown'\n",
-    ">- For now, I will fill in all missing values in the boat column with 'Unknown', but I'm unsure if it has any predictive power so I may circle back and delete it."
+    ">- For now, I will fill in all missing values in the boat column with 'Unknown', but I imagine its highly correlated with our target feature so it will probably end up being removed during feature selection."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 131,
    "id": "85cd2c3f",
    "metadata": {},
    "outputs": [
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 132,
    "id": "ca47dbee",
    "metadata": {},
    "outputs": [
@@ -789,7 +790,7 @@
        "9      True       False       False             False  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 133,
    "id": "a660c15e",
    "metadata": {},
    "outputs": [
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 134,
    "id": "9eeabd53",
    "metadata": {},
    "outputs": [
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 135,
    "id": "7359e473",
    "metadata": {},
    "outputs": [
@@ -1049,17 +1050,24 @@
     ">- Home destination\n",
     ">- Boat\n",
     "\n",
-    "For name I'll use binary encoding, because it is suited for high-cardinality features by reducing its dimensionality.\n",
+    "<br>\n",
     "\n",
-    "For ticket I'll also use binary encoding. Tickets are nearly unique, meaning this column also has high-cardinality.\n",
+    "For name and ticket I'll use binary encoding, because it represents high-cardinality features while reducing its dimensionality. Since each name and ticket is near-unique accross the entire dataset, it's important to reduce the dimensionality of each as much as possible. One-hot encoding would create thousands of sparse columns leading to increased computational complexitiy and overfitting. Binary encoding strikes a balance by preserving some categorical relationships while keeping the feature space manageable.\n",
+    ">- One way to improve my models accuarcy is to extract the titles from peoples names (Dr. Mr. etc.) and encode this using Count encoding. I think this will probably have more predictive power.\n",
     "\n",
-    "For home destination I'll use count encoding, because ...\n",
-    "\n"
+    "<br>\n",
+    "\n",
+    "The home destination column has 297 unique values in the training set alone, because some values have two cities in it split by a '/'. I'm deciding to just extract the first city only and then use count encoding on it. This retains a lot of the information (especially compared to converting it to just known vs unknown), while still being simple to implement.\n",
+    ">- As you can see with the blow print statements, extracting the first city only got rid of 39 unique values. So, I will also use binary encoding instead of count encoding, because it reduces dimensionality, avoids overfitting by ensuring rare destinations don't overpower the model, and it will handle unseen cities better in the testing and validation sets.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "The boat column is going to be highly correlated with survived (as it denotes that an individual made it onto the lifeboat to begin with), so I'll convert it into a binary indicator representing whether an individual was in a boat or not. This ensures that the boat column is still only one column, even though most tickets are unique from each other. It is also the simpler approach to take, especially considering it'll likley be removed during feature selection. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 136,
    "id": "c81eba21",
    "metadata": {},
    "outputs": [
@@ -1067,17 +1075,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "297\n"
+      "Unique values in home destination before extraction: 297\n",
+      "Unique values in home destination after extraction: 258\n"
      ]
     }
    ],
    "source": [
-    "print(f\"{main_train['home.dest'].nunique()}\")\n",
     "\n",
     "encoder= BinaryEncoder(cols=['name', 'ticket'])\n",
     "main_train = encoder.fit_transform(main_train)\n",
     "main_validation = encoder.transform(main_validation)\n",
-    "main_test = encoder.transform(main_test)"
+    "main_test = encoder.transform(main_test)\n",
+    "\n",
+    "print(f\"Unique values in home destination before extraction: {main_train['home.dest'].nunique()}\")\n",
+    "main_train['home.dest'] = main_train['home.dest'].apply(lambda x: x.split('/')[0].strip())\n",
+    "main_validation['home.dest'] = main_validation['home.dest'].apply(lambda x: x.split('/')[0].strip())\n",
+    "main_test['home.dest'] = main_test['home.dest'].apply(lambda x: x.split('/')[0].strip())\n",
+    "print(f\"Unique values in home destination after extraction: {main_train['home.dest'].nunique()}\")\n",
+    "\n",
+    "encoder = BinaryEncoder(cols=['home.dest'])\n",
+    "main_train = encoder.fit_transform(main_train)\n",
+    "main_validation = encoder.transform(main_validation)\n",
+    "main_test = encoder.transform(main_test)\n",
+    "\n",
+    "main_train['boat'] = main_train['boat'].apply(lambda x: 0 if x == 'unknown' else 1)\n",
+    "main_validation['boat'] = main_validation['boat'].apply(lambda x: 0 if x == 'unknown' else 1)\n",
+    "main_test['boat'] = main_test['boat'].apply(lambda x: 0 if x == 'unknown' else 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "651db372",
+   "metadata": {},
+   "source": [
+    "# Task 4: Feature Scaling\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca9cc27",
+   "metadata": {},
+   "source": [
+    "By scaling our numerical features, we ensure they all have a similar range. It improves model performance by tranforming features on a common scale, making it much easier (and more accurate) to make comparisons between features.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Standardization is one method of feature scaling, and it centers data around 0 with a standard deviation of 1. This makes it less sensitive to outliers because it doesn't bind the data, it only centers it, and it preserves the distances and relationships between data points. Standarization is used when the data is normally distributed or you suspect it to have a Gaussian-like distribution, and for models assuming normality- like Logistic Regression. This is for a couple reasons:\n",
+    "\n",
+    ">- Many models, including Logistic Regression, use gradient descent to optimize the loss function. Standardization makes the cost function more symmetrical and smoother, helping the gradient descent algorthim converge faster and more reliably.\n",
+    "\n",
+    ">- Logistic Regression assumes a linear relationship between the input features and the log-odds of the outcome. Standardization makes the features more comparable in scale, which improves this linear relationship and thus improves the accuracy of this assumption. This is important, because the weights in models such as Logisitc Regression are interpreted as the change in log-odds for a one standard deviation increase in the feature. Since standardization enforces a S.D. of 1 across all numerical features, this makes the weights comparable accross features.\n",
+    "\n",
+    ">- Furthermore, Regularization (how the model is penalized for complexity during training) techniques add a penalty term proportional to the magnitude of the weights. If features are on different scales (and therefore have different S.D.) their weights will not be comparable to the values actual affect to the model. The regularization term penalizes larger weights more, even if the feature is measured in larger units, for example. So, standarization ensures that all features contribute equally to the pentalty leading to fair regularization.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Normalization, on the other hand, rescales values to a fixed range. This ensures that the original distribution's shape is preserved and that the values are always positive and bounded (making it good for neural networks). However, this makes it sensitive to outliers, as a single outlier can greatly compress the rest of the values. It also doesn't handle negative values well. You should use normalization when you don't know the distribution of the data or when its highly skewed, and its great for distance-based models like kNN and Neural Networks. This is because:\n",
+    "\n",
+    ">- Its based purley based on the min and max values of a feature, meaning it doesn't assume any specific distribution.\n",
+    "\n",
+    ">- Since all data is compressed into a fixed range, outliers are compressed as well. This means the outliers don't affect the mean and S.D. of a feature's distribution, however it decreases relative distances which can lead to a loss of information for the majority of the data points.\n",
+    "\n",
+    ">- By normalizing the magnitude of each features, it greatly improves the accuarcy of distance-based models (like kNN and Neural Networks). It ensures that no one feature dominates the distance metric, even though its real magnitude is much higher than other numerical features.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Since we're working with a Logistic Regression Model, which assumes normality, we should use standardization. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "367b88e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "306     0.905927\n",
+       "927    -0.366777\n",
+       "642    -0.023788\n",
+       "1294   -0.333441\n",
+       "1015   -0.496495\n",
+       "220     0.595854\n",
+       "985    -0.514893\n",
+       "356    -0.396232\n",
+       "538    -0.401549\n",
+       "828     0.290421\n",
+       "382    -0.234190\n",
+       "813    -0.512699\n",
+       "419    -0.426615\n",
+       "273     2.064781\n",
+       "214     1.634863\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "cols_to_scale = ['age', 'sibsp', 'parch', 'fare']\n",
+    "scaler.fit(main_train[cols_to_scale])\n",
+    "\n",
+    "main_train[cols_to_scale] = scaler.transform(main_train[cols_to_scale])\n",
+    "main_validation[cols_to_scale] = scaler.transform(main_validation[cols_to_scale])\n",
+    "main_test[cols_to_scale] = scaler.transform(main_test[cols_to_scale])\n",
+    "\n",
+    "main_train.head(15)"
    ]
   }
  ],
