--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 144,
    "id": "71d4e8e3-0bef-4f6c-a7d1-5d7ed54099c5",
    "metadata": {},
    "outputs": [
@@ -28,16 +28,13 @@
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.8 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting category-encoders\n",
-      "  Downloading category_encoders-2.6.4-py2.py3-none-any.whl.metadata (8.0 kB)\n",
+      "Requirement already satisfied: category-encoders in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (2.6.4)\n",
       "Requirement already satisfied: numpy>=1.14.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (1.24.4)\n",
       "Requirement already satisfied: scikit-learn>=0.20.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (1.3.2)\n",
       "Requirement already satisfied: scipy>=1.0.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (1.10.1)\n",
-      "Collecting statsmodels>=0.9.0 (from category-encoders)\n",
-      "  Downloading statsmodels-0.14.1-cp38-cp38-macosx_10_9_x86_64.whl.metadata (9.5 kB)\n",
+      "Requirement already satisfied: statsmodels>=0.9.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (0.14.1)\n",
       "Requirement already satisfied: pandas>=1.0.5 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (2.0.3)\n",
-      "Collecting patsy>=0.5.1 (from category-encoders)\n",
-      "  Downloading patsy-1.0.1-py2.py3-none-any.whl.metadata (3.3 kB)\n",
+      "Requirement already satisfied: patsy>=0.5.1 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (1.0.1)\n",
       "Requirement already satisfied: importlib-resources in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from category-encoders) (6.4.5)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from pandas>=1.0.5->category-encoders) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from pandas>=1.0.5->category-encoders) (2024.1)\n",
@@ -47,12 +44,24 @@
       "Requirement already satisfied: packaging>=21.3 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from statsmodels>=0.9.0->category-encoders) (24.1)\n",
       "Requirement already satisfied: zipp>=3.1.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from importlib-resources->category-encoders) (3.20.2)\n",
       "Requirement already satisfied: six>=1.5 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category-encoders) (1.16.0)\n",
-      "Downloading category_encoders-2.6.4-py2.py3-none-any.whl (82 kB)\n",
-      "Downloading patsy-1.0.1-py2.py3-none-any.whl (232 kB)\n",
-      "Downloading statsmodels-0.14.1-cp38-cp38-macosx_10_9_x86_64.whl (10.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.5/10.5 MB\u001b[0m \u001b[31m10.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: patsy, statsmodels, category-encoders\n",
-      "Successfully installed category-encoders-2.6.4 patsy-1.0.1 statsmodels-0.14.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.8 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting imblearn\n",
+      "  Downloading imblearn-0.0-py2.py3-none-any.whl.metadata (355 bytes)\n",
+      "Collecting imbalanced-learn (from imblearn)\n",
+      "  Downloading imbalanced_learn-0.12.4-py3-none-any.whl.metadata (8.3 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from imbalanced-learn->imblearn) (1.24.4)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.2 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from imbalanced-learn->imblearn) (1.3.2)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from imbalanced-learn->imblearn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from imbalanced-learn->imblearn) (3.5.0)\n",
+      "Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+      "Downloading imbalanced_learn-0.12.4-py3-none-any.whl (258 kB)\n",
+      "Installing collected packages: imbalanced-learn, imblearn\n",
+      "Successfully installed imbalanced-learn-0.12.4 imblearn-0.0\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.8 install --upgrade pip\u001b[0m\n",
@@ -63,12 +72,13 @@
    "source": [
     "%pip install pandas\n",
     "%pip install xlrd\n",
-    "%pip install category-encoders"
+    "%pip install category-encoders\n",
+    "%pip install imblearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 146,
    "id": "051f05a0-5d3f-4b71-adb1-66c6f39060fa",
    "metadata": {},
    "outputs": [],
@@ -78,7 +88,9 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from category_encoders import BinaryEncoder"
+    "from category_encoders import BinaryEncoder\n",
+    "from imblearn.over_sampling import ADASYN\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -1185,6 +1197,39 @@
     "main_test[cols_to_scale] = scaler.transform(main_test[cols_to_scale])\n",
     "\n",
     "main_train.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3ba34a7",
+   "metadata": {},
+   "source": [
+    "# Task 6: Addressing Class Imbalance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3461effd",
+   "metadata": {},
+   "source": [
+    "If you revisit task 5, you can see that I plotted the distriubtion of survivors vs non-survivors in my training set. I described how this is a problem when training a model, as it'll lead to predictions biased towards whichever class has the majority. If the model predicted that everyone didn't survive, it will still have an accuracy of ~60%.\n",
+    "\n",
+    "I choose to use ADASYN over SMOTE, as its essentially an improved version of SMOTE. Rather than just choosing random points along the lines connecting neighbors, ADASYN adds a small amount of variance to the values making them more realistic and scattered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "835fb5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Before resampling: {Counter(target_train)}\")\n",
+    "\n",
+    "sampler = ADASYN(random_state=42)\n",
+    "main_train_resampled, target_train_resampled = sampler.fit_resample(main_train, target_train)\n",
+    "\n",
+    "print(f\"After resampling: {Counter(target_train_resampled)}\")"
    ]
   }
  ],
