final touches; finished i thinkl

--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -518,7 +518,11 @@
     ">- I will delete the cabin column, as it only has 295 values and in my opinion has little predictive power.\n",
     ">- I will delete the body column, as it also has very few values and in my opinion it has little predicitve power.\n",
     ">- I will fill in all missing values in the home.dest and embarked columns with 'Unknown'\n",
-    ">- For now, I will fill in all missing values in the boat column with 'Unknown', but I imagine its highly correlated with our target feature so it will probably end up being removed during feature selection."
+    ">- For now, I will fill in all missing values in the boat column with 'Unknown', but I imagine its highly correlated with our target feature so it will probably end up being removed during feature selection.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Once I have my train set, I will address the missing values in the age and fare columns. To do so I will have to analyze their distribution to see which metric is best suited to impute into their missing values."
    ]
   },
   {
@@ -1740,6 +1744,14 @@
    "id": "67fd217d",
    "metadata": {},
    "source": [
+    "By splitting the dataset into train, validation, and test sets before balancing the classes and selecting the features we avoid data leakage, ensuring a fair evaluation of our model. \n",
+    "\n",
+    "ADASYN generates synthetic data by learning from exisitg examples in the minority class. If applied before splitting, the validation and test sets could contain synthetic samples that were generated from the test set. This means the model would be trained off data that's very similar to data already included in the validation and test sets, leading to inflated performance metrics. \n",
+    "\n",
+    "Feature selection analyzes feature relationships within the dataset. If we did this before splitting the data, it would be using information from the entire dataset to make these conclusions. We (/ our program) would have knowledge from the entire dataset, meaning our validation and test sets are no longer unseen data.\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "By performing feature selection, we eliminate features that don't contribute meaningful information. This reduces overfitting and improves model performance (fewer features to train on).\n",
     "\n",
     "First, we will eliminate features with low variance."
