--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "id": "71d4e8e3-0bef-4f6c-a7d1-5d7ed54099c5",
    "metadata": {},
    "outputs": [
@@ -61,8 +61,7 @@
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.8 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting seaborn\n",
-      "  Downloading seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: seaborn in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (0.13.2)\n",
       "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from seaborn) (1.24.4)\n",
       "Requirement already satisfied: pandas>=1.2 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from seaborn) (2.0.3)\n",
       "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from seaborn) (3.7.5)\n",
@@ -79,9 +78,6 @@
       "Requirement already satisfied: tzdata>=2022.1 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from pandas>=1.2->seaborn) (2023.4)\n",
       "Requirement already satisfied: zipp>=3.1.0 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.20.2)\n",
       "Requirement already satisfied: six>=1.5 in /Users/borisgans/Library/Python/3.8/lib/python/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-      "Downloading seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Installing collected packages: seaborn\n",
-      "Successfully installed seaborn-0.13.2\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.8 install --upgrade pip\u001b[0m\n",
@@ -99,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 4,
    "id": "051f05a0-5d3f-4b71-adb1-66c6f39060fa",
    "metadata": {},
    "outputs": [],
@@ -128,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "id": "63d14666-f362-49fa-a94a-63c925960872",
    "metadata": {},
    "outputs": [
@@ -282,7 +278,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "id": "c41e9f6a",
    "metadata": {},
    "outputs": [
@@ -323,39 +319,50 @@
       "max     512.329200  328.000000  \n",
       "\n",
       "Columns: Index(['pclass', 'survived', 'name', 'sex', 'age', 'sibsp', 'parch', 'ticket',\n",
-      "       'fare', 'cabin', 'embarked', 'boat', 'body', 'home.dest'],\n",
+      "       'fare', 'cabin', 'embarked', 'boat', 'body', 'home.dest', 'age_bin'],\n",
       "      dtype='object')\n",
       "\n",
       "Data types:\n",
-      " pclass         int64\n",
-      "survived       int64\n",
-      "name          object\n",
-      "sex           object\n",
-      "age          float64\n",
-      "sibsp          int64\n",
-      "parch          int64\n",
-      "ticket        object\n",
-      "fare         float64\n",
-      "cabin         object\n",
-      "embarked      object\n",
-      "boat          object\n",
-      "body         float64\n",
-      "home.dest     object\n",
+      " pclass          int64\n",
+      "survived        int64\n",
+      "name           object\n",
+      "sex            object\n",
+      "age           float64\n",
+      "sibsp           int64\n",
+      "parch           int64\n",
+      "ticket         object\n",
+      "fare          float64\n",
+      "cabin          object\n",
+      "embarked       object\n",
+      "boat           object\n",
+      "body          float64\n",
+      "home.dest      object\n",
+      "age_bin      category\n",
       "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "# Useful for numerical data. As we can see, pclass is already ordinally encoded (min of 1 max of 3)\n",
     "print(data.describe())\n",
+    "\n",
     "print(f\"\\nColumns: {data.columns}\")\n",
     "\n",
+    "# This is great for distinguishing between the categorical and numerical variables\n",
     "print(f\"\\nData types:\\n {data.dtypes}\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2742fb63",
+   "metadata": {},
+   "source": [
+    "Now I'm gonna create some plots to visualize relationships between survival and: passenger class, gender, and age. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 23,
    "id": "bde4a3fd-645b-4dc1-aeea-7f30873e4fbd",
    "metadata": {},
    "outputs": [
@@ -388,24 +395,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0                          St Louis, MO\n",
-      "1       Montreal, PQ / Chesterville, ON\n",
-      "2       Montreal, PQ / Chesterville, ON\n",
-      "3       Montreal, PQ / Chesterville, ON\n",
-      "4       Montreal, PQ / Chesterville, ON\n",
-      "                     ...               \n",
-      "1304                                NaN\n",
-      "1305                                NaN\n",
-      "1306                                NaN\n",
-      "1307                                NaN\n",
-      "1308                                NaN\n",
-      "Name: home.dest, Length: 1309, dtype: object\n"
-     ]
     }
    ],
    "source": [
@@ -430,18 +419,14 @@
     "#Survival rate vs age\n",
     "age_bins = [0, 5, 10, 15, 20, 25, 30, 35, 40, 50, 60, 70, 80]\n",
     "data['age_bin'] = pandas.cut(data['age'], bins=age_bins)\n",
-    "\n",
     "survival_by_age_bin = data.groupby('age_bin')['survived'].mean()\n",
     "survival_by_age_bin.plot(kind='bar', color='orange', edgecolor='black')\n",
     "\n",
     "plt.title('Survival Ratio by Age Bin')\n",
     "plt.xlabel('Age Bin')\n",
     "plt.ylabel('Survival Ratio')\n",
-    "\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "plt.show()\n",
-    "\n",
-    "print(f\"{data['home.dest']}\")\n"
+    "plt.show()"
    ]
   },
   {
@@ -454,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "id": "54987ccf",
    "metadata": {},
    "outputs": [
@@ -488,6 +473,8 @@
    ],
    "source": [
     "data.drop(columns=['age_bin'], inplace=True)\n",
+    "# getting rid of column i used for plot in previous cell\n",
+    "\n",
     "pre_split_data = data.copy()\n",
     "pre_split_data.info()"
    ]
@@ -527,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "id": "85cd2c3f",
    "metadata": {},
    "outputs": [
@@ -577,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "id": "ca47dbee",
    "metadata": {},
    "outputs": [
@@ -831,7 +818,7 @@
        "9      True       False       False             False  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "id": "a660c15e",
    "metadata": {},
    "outputs": [
@@ -940,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 12,
    "id": "9eeabd53",
    "metadata": {},
    "outputs": [
@@ -980,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 13,
    "id": "7359e473",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 14,
    "id": "c81eba21",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 15,
    "id": "367b88e0",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1659,7 @@
        "[15 rows x 39 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "id": "835fb5dc",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "id": "73ef64ff",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 18,
    "id": "6166ed33",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 19,
    "id": "3d8cb4ab",
    "metadata": {},
    "outputs": [
@@ -1903,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 20,
    "id": "035f7816",
    "metadata": {},
    "outputs": [
@@ -1956,6 +1943,14 @@
    "source": [
     "As you can see, the model performed quite well with an accuracy of 95% on the validation set and 96% on the test set. The confusion matrix allows you to visualize this accuarcy, with only 5 false negatives and 4 false positives."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60e1d1a2-f07f-41e4-bab6-fc0e38c7b93e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
