--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "051f05a0-5d3f-4b71-adb1-66c6f39060fa",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "63d14666-f362-49fa-a94a-63c925960872",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "c41e9f6a",
    "metadata": {},
    "outputs": [
@@ -319,25 +319,24 @@
       "max     512.329200  328.000000  \n",
       "\n",
       "Columns: Index(['pclass', 'survived', 'name', 'sex', 'age', 'sibsp', 'parch', 'ticket',\n",
-      "       'fare', 'cabin', 'embarked', 'boat', 'body', 'home.dest', 'age_bin'],\n",
+      "       'fare', 'cabin', 'embarked', 'boat', 'body', 'home.dest'],\n",
       "      dtype='object')\n",
       "\n",
       "Data types:\n",
-      " pclass          int64\n",
-      "survived        int64\n",
-      "name           object\n",
-      "sex            object\n",
-      "age           float64\n",
-      "sibsp           int64\n",
-      "parch           int64\n",
-      "ticket         object\n",
-      "fare          float64\n",
-      "cabin          object\n",
-      "embarked       object\n",
-      "boat           object\n",
-      "body          float64\n",
-      "home.dest      object\n",
-      "age_bin      category\n",
+      " pclass         int64\n",
+      "survived       int64\n",
+      "name          object\n",
+      "sex           object\n",
+      "age          float64\n",
+      "sibsp          int64\n",
+      "parch          int64\n",
+      "ticket        object\n",
+      "fare         float64\n",
+      "cabin         object\n",
+      "embarked      object\n",
+      "boat          object\n",
+      "body         float64\n",
+      "home.dest     object\n",
       "dtype: object\n"
      ]
     }
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "bde4a3fd-645b-4dc1-aeea-7f30873e4fbd",
    "metadata": {},
    "outputs": [
@@ -439,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "54987ccf",
    "metadata": {},
    "outputs": [
@@ -514,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "85cd2c3f",
    "metadata": {},
    "outputs": [
@@ -564,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ca47dbee",
    "metadata": {},
    "outputs": [
@@ -818,7 +817,7 @@
        "9      True       False       False             False  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a660c15e",
    "metadata": {},
    "outputs": [
@@ -927,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "9eeabd53",
    "metadata": {},
    "outputs": [
@@ -967,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "7359e473",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c81eba21",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "367b88e0",
    "metadata": {},
    "outputs": [
@@ -1659,7 +1658,7 @@
        "[15 rows x 39 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "835fb5dc",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "73ef64ff",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6166ed33",
    "metadata": {},
    "outputs": [
@@ -1831,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "3d8cb4ab",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "035f7816",
    "metadata": {},
    "outputs": [
@@ -1922,7 +1921,7 @@
    ],
    "source": [
     "target_pred_test = model.predict(main_test)\n",
-    "cm = confusion_matrix(target_validation, target_pred)\n",
+    "cm = confusion_matrix(target_test, target_pred_test)\n",
     "\n",
     "plt.figure(figsize=(6, 5))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=False,\n",
@@ -1943,14 +1942,6 @@
    "source": [
     "As you can see, the model performed quite well with an accuracy of 95% on the validation set and 96% on the test set. The confusion matrix allows you to visualize this accuarcy, with only 5 false negatives and 4 false positives."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60e1d1a2-f07f-41e4-bab6-fc0e38c7b93e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
