--- a/assignment_1_boris_gans.ipynb
+++ b/assignment_1_boris_gans.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d3253ed0-2a5a-4ea6-90bb-74b5a71166fe",
+   "metadata": {},
+   "source": [
+    "Github: https://github.com/studentBorisGans/ML-fundamentals-2025.git"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "71d4e8e3-0bef-4f6c-a7d1-5d7ed54099c5",
+   "id": "d5f4875a-0d98-400f-8198-ad7524812d25",
    "metadata": {},
    "outputs": [
     {
