--- a/assignment_2/assignment_2_boris_gans.ipynb
+++ b/assignment_2/assignment_2_boris_gans.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "4           1  0.24  0.2879  0.75        0.0       0           1    1  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "4  0.2879  0.75        0.0    1  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,6 +1019,66 @@
     "pre_split_data = data.copy()\n",
     "pre_split_data.info()\n",
     "pre_split_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2: Data Splitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets split our dataset into training (60%), testing (20%) and validation (20%) sets. Imporantly, we should ensure all entries maintain their chronological order, ensuring that we don't end up trying to predict past events with future data (data leakage!)\n",
+    "\n",
+    "I actually had to re-do this part. At first I incorporated no randomness, and just sorted the data by their chronological order and split it that way. Then I thought about splitting up the data into temporal blocks (eg. one month) and randomly shuffling these around, however that of course will lead to data leakage. Instead, I identified what I think is a good option:\n",
+    ">- Still sort the data chronologically and split it accordingly, so the training set contains the first 60% of data and so on. Then, split the training set into temporal blocks of one month and shuffle these around. This way the model is trained off of semi-randomly distrubted data, and the validation and test sets are still in the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_sorted = pre_split_data.sort_values(by=['yr', 'mnth', 'hr'])\n",
+    "\n",
+    "# Calculate split indices\n",
+    "n = len(data_sorted)\n",
+    "train_end = int(n * 0.6)\n",
+    "val_end = int(n * 0.8)\n",
+    "\n",
+    "# Split the data\n",
+    "train_data = data_sorted.iloc[:train_end]\n",
+    "val_data = data_sorted.iloc[train_end:val_end]\n",
+    "test_data = data_sorted.iloc[val_end:]\n",
+    "\n",
+    "# Split train_data into monthly blocks\n",
+    "train_data['month'] = train_data['mnth']\n",
+    "monthly_groups = train_data.groupby('month')\n",
+    "\n",
+    "# Shuffle the monthly groups\n",
+    "shuffled_train_data = monthly_groups.apply(lambda x: x.sample(frac=1)).reset_index(drop=True)\n",
+    "\n",
+    "# Separate features and target\n",
+    "X_train = shuffled_train_data.drop(columns=['cnt', 'month'])\n",
+    "y_train = train_data['cnt']\n",
+    "\n",
+    "y_val = val_data['cnt']\n",
+    "X_val = val_data.drop(columns=['cnt'])\n",
+    "\n",
+    "y_test = test_data['cnt']\n",
+    "X_test = test_data.drop(columns=['cnt'])\n",
+    "\n",
+    "\n",
+    "print(f\"Data split complete:\")\n",
+    "print(f\"Training set: {X_train.shape[0]} samples ({X_train.shape[0]/n:.1%})\")\n",
+    "print(f\"Validation set: {X_val.shape[0]} samples ({X_val.shape[0]/n:.1%})\")\n",
+    "print(f\"Test set: {X_test.shape[0]} samples ({X_test.shape[0]/n:.1%})\\n\")\n",
+    "print(X_train.info())\n"
    ]
   }
  ],
